<resources>
    <string name="app_name">EM-scanner</string>

    <!-- Strings related to login -->
    <string name="prompt_username">PhoneNumber</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_account">Register Account!</string>
    <string name="input_phone_number">Please input phone number!</string>
    <string name="input_phone_pasword">Please input password!</string>
    <string name="input_verification">Please input verification code!</string>
    <string name="get_verification_code">Get verification code!</string>
    <string name="confirm_login">Confirm Login!</string>
    <string name="title_action_cut">Cut</string>
    <string name="title_action_copy">Copy</string>
    <string name="title_action_delete">Delete</string>
    <string name="title_action_share">Share</string>

    <string name="welcome_head_01">Spreadsheets on the go</string>
    <string name="welcome_content_01">Get stuff done with or without an internet connection.</string>
    <string name="welcome_head_02">Share and edit together</string>
    <string name="welcome_content_02">Write on your own or invite more people to contribute.</string>
    <string name="welcome_head_03">Automatically save to the web</string>
    <string name="welcome_content_03">Never lose your progress, so you can keep working from any computer or device.</string>
    <string name="welcome_head_04">Edit Excel spreadsheets</string>
    <string name="welcome_content_04">Open, edit, and save Excel files - all within Sheets.</string>
    <string name="welcome_skip">SKIP</string>
    <string name="welcome_done">DONE</string>

    <string name="menu_action_all_down">All down</string>
    <string name="menu_action_up_down">Up down</string>
    <string name="menu_action_up_down_stack">Up down stack</string>

    <string name="register_phone_prefix">Please enter</string>
    <string name="register_phone_suffix">Received verification code.</string>

    <string name="qrdata_table">Electricity form</string>
    <string name="qrdata_id">ID</string>
    <string name="qrdata_group_name">Group Name</string>
    <string name="qrdata_number">Number</string>
    <string name="qrdata_date">Time</string>
    <string name="qrdata_valley_value">Valley Value :</string>
    <string name="qrdata_peak_value">Peak Value :</string>
    <string name="qrdata_total_value">Total Value :</string>
    <string name="qrdata_case_number">Case Number :</string>
    <string name="qrdata_case_name">Case Name :</string>
    <string name="qrdata_case_type">Case Type :</string>
    <string name="qrdata_case_name1">Single-phase table</string>
    <string name="qrdata_case_name2">Three-phase table</string>
    <string name="qrdata_case_type1">Sales</string>
    <string name="qrdata_case_type2">Rotation</string>
    <string name="qrdata_case_type3">Malfunction</string>
    <string name="qrdata_case_type4">Capacity increase</string>

    <string name="prompt_account">Account:</string>
    <string name="next_action">Next</string>
    <string name="reset_password">Please set up a new login password!</string>
    <string name="enter_normal_characters">Please enter 6-20 characters!</string>
    <string name="forget_remarks">Please enter 6-20 character remarks: please set the password to 6-20, and it is composed of letters, Numbers or semicolon symbols, and cannot be the same as the old password</string>
    <string name="forget_done">Done</string>

    <string name="register_protocol">Agree to scan barcode user registration protocol</string>
    <string name="register_password">Please set the login password！</string>
    <string name="register_confirm_password">Enter password again!</string>
    <string name="register_password_visible">The password is visible!</string>
    <string name="register_remarks">The password is made up of 6-20 letters, Numbers, or semiangular symbols!</string>

    <string name="card_table_name">33300010001000998457545</string>
    <string name="card_table_date">2017-8-13</string>
    <string name="card_table_info">Detailed data of the meter!</string>

    <string name="qrcore_scanner_qr">Scan QR Code</string>
    <string name="qrcore_scanner_data">View Data</string>
    <string name="qrcore_scanner_excel">Export Excel</string>
    <string name="qrcore_scanner_clear">Clear Data</string>
    <string name="qrcore_scanner_camera">Select Camera</string>
    <string name="qrcore_scanner_group">Please enter the group:</string>
    <string name="qrcore_scanner_valley_value">Please enter the power valley value:</string>
    <string name="qrcore_scanner_peak_value">Please enter the power peak value:</string>
    <string name="qrcore_scanner_total_value">Please enter the power total value:</string>
    <string name="qrcode_dialog_cancel">Cancel</string>
    <string name="qrcode_dialog_ok">OK</string>
    <string name="input_username">Input username</string>
    <string name="choose_date">Choose the date of the year</string>
    <string name="login_sign_in">Press and hold login.</string>

    <string name="qrdata_case_group_number">Case Number:</string>
    <string name="qrdata_case_total_value">Meter total battery:</string>
    <string name="qrdata_case_valley_value">Meter valley battery:</string>

    <string-array name="type">
        <item>@string/qrdata_case_type1</item>
        <item>@string/qrdata_case_type2</item>
        <item>@string/qrdata_case_type3</item>
        <item>@string/qrdata_case_type4</item>
    </string-array>

    <string name="qrdata_case_type_hint">Please select case type :</string>
    <string name="qrdata_excel_username">User：</string>
    <string name="qrdata_excel_datetime">DateTime：</string>
    <string name="qrdata_case_number_hint">Please select case number :</string>

    <string-array name="excel_number">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>All</item>
    </string-array>
</resources>