<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/qrcore_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <br.com.bloder.magic.view.MagicButton
            android:id="@+id/magic_button_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:button_icon="@drawable/scanning"
            app:button_icon_height="25dp"
            app:button_icon_width="25dp"
            app:expandable_area_color="#f64029"
            app:hide_text="@string/qrcore_scanner_qr"
            app:icon_button_color="#95f9f8f7"
            app:magic_button_size="50dp"/>

        <br.com.bloder.magic.view.MagicButton
            android:id="@+id/magic_button_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            app:button_icon="@drawable/data"
            app:button_icon_height="25dp"
            app:button_icon_width="25dp"
            app:expandable_area_color="#1296db"
            app:hide_text="@string/qrcore_scanner_data"
            app:icon_button_color="#365899"
            app:magic_button_size="50dp"/>

        <br.com.bloder.magic.view.MagicButton
            android:id="@+id/magic_button_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            app:button_icon="@drawable/exl"
            app:button_icon_height="25dp"
            app:button_icon_width="25dp"
            app:expandable_area_color="#08af24"
            app:hide_text="@string/qrcore_scanner_excel"
            app:icon_button_color="#87f276"
            app:magic_button_size="50dp"/>

        <br.com.bloder.magic.view.MagicButton
            android:id="@+id/magic_button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            app:button_icon="@drawable/clear"
            app:button_icon_height="25dp"
            app:button_icon_width="25dp"
            app:expandable_area_color="#13227a"
            app:hide_text="@string/qrcore_scanner_clear"
            app:icon_button_color="#465ad1"
            app:magic_button_size="50dp"/>

        <br.com.bloder.magic.view.MagicButton
            android:id="@+id/magic_button_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            app:button_icon="@drawable/camera"
            app:button_icon_height="25dp"
            app:button_icon_width="25dp"
            app:expandable_area_color="#f5046d"
            app:hide_text="@string/qrcore_scanner_camera"
            app:icon_button_color="#f77db3"
            app:magic_button_size="50dp"/>
    </LinearLayout>

</RelativeLayout>
