<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e1e1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_second_number"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#000000"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/register_verification_code"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:hint="@string/input_verification"
            android:singleLine="true"
            android:maxLength="4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/send_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/register_verification_code"
            android:background="#a9a8a6"
            android:text="@string/get_verification_code"
            android:textSize="14sp"
            android:singleLine="true"
            android:textColor="#7b7a77"/>
    </RelativeLayout>

    <Button
        android:id="@+id/register_next_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="#a9a8a6"
        android:text="@string/next_action"
        android:textColor="#7b7a77"
        />
</LinearLayout>
