<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear_list_card_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:stackHeaderHeight="160dp">

    <FrameLayout
        android:id="@+id/frame_list_card_item"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/shape_rectangle_with_radius">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_list_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/card_table_name"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_list_card_case_number"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:singleLine="true"
                    android:layout_centerVertical="true"
                    android:text="@string/qrdata_case_number"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_list_card_case_number_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/text_list_card_case_number"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/text_list_card_case_number"
                    android:layout_marginEnd="100dp"
                    android:text="111"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_list_card_valley_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/qrdata_valley_value"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_list_card_valley_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/text_list_card_valley_title"
                    android:layout_toRightOf="@+id/text_list_card_valley_title"
                    android:layout_marginEnd="100dp"
                    android:layout_centerVertical="true"
                    android:text="100.00"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_list_card_total_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_centerVertical="true"
                    android:text="@string/qrdata_total_value"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_list_card_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/text_list_card_total_title"
                    android:layout_toRightOf="@+id/text_list_card_total_title"
                    android:layout_marginEnd="100dp"
                    android:layout_centerVertical="true"
                    android:text="1000.00"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_list_card_case_name"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_centerVertical="true"
                    android:singleLine="true"
                    android:text="@string/qrdata_case_name"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_list_card_case_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/text_list_card_case_name"
                    android:layout_toRightOf="@+id/text_list_card_case_name"
                    android:layout_marginEnd="100dp"
                    android:layout_centerVertical="true"
                    android:text="@string/qrdata_case_name1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_list_card_case_type"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:singleLine="true"
                    android:layout_centerVertical="true"
                    android:text="@string/qrdata_case_type"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_list_card_case_type_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/text_list_card_case_type"
                    android:layout_toRightOf="@+id/text_list_card_case_type"
                    android:layout_marginEnd="100dp"
                    android:text="@string/qrdata_case_type1"
                    android:singleLine="true"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_list_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/card_table_info"
            />
    </LinearLayout>

</LinearLayout>