<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_backgroud"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:hint="@string/input_username"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"/>

    </RelativeLayout>

    <ru.katso.livebutton.LiveButton
        xmlns:livebutton="http://schemas.android.com/apk/res-auto"
        android:id="@+id/choose_date_button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/input_username"
        android:gravity="center"
        android:text="@string/choose_date"
        android:textColor="#000000"
        android:textSize="16sp"
        android:singleLine="true"
        livebutton:backgroundColor="#92ec96"
        livebutton:corners="4dp"
        livebutton:normalHeight="6dp"
        livebutton:pressedHeight="2dp"
        livebutton:shadowColor="#5df964"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        >

        <com.shitij.goyal.slidebutton.SwipeButton
            android:id="@+id/simple_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:layout_marginBottom="2dp"
            android:background="#40ea5a"
            android:gravity="center"
            android:text="@string/login_sign_in"
            android:textColor="#FFFFFF"
            app:after_confirmation_background="#40ea5a"
            app:button_confirm_text="Confirmed!!"
            app:button_swipe_text="Swipe!!"
            app:gradient_color_1="#08ef1b"
            app:gradient_color_2="#08ef1b"
            app:gradient_color_2_width="100dp"
            app:gradient_color_3="#08ef1b"
            app:swipe_mode="mirror"
            app:threshold="0.7"/>
    </RelativeLayout>

</LinearLayout>
